--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,10 @@ qgis (1.9.90) UNRELEASED; urgency=low
   * new development version 1.9.90 after branch of 1.8.0
   * include function help in package
   * include heatmap plugin
+  * drop extra include path for QtWebkit on oneiric and natty
+  * add translations for desktop link
 
- -- Jürgen E. Fischer <jef@norbit.de>  Mon, 13 Feb 2012 17:38:05 +0100
+ -- Jürgen E. Fischer <jef@norbit.de>  Thu, 16 Feb 2012 23:21:09 +0100
 
 qgis (1.8.0) UNRELEASED; urgency=low
 
