--- a/debian/changelog
+++ b/debian/changelog
@@ -6,10 +6,10 @@ qgis (1.9.90) UNRELEASED; urgency=low
   * drop extra include path for QtWebkit on oneiric and natty
   * add translations for desktop link
   * add browser desktop entry
-  * add support for Ubuntu precise
-  * build package with libspatialite where available
+  * add support for Debian wheezy and Ubuntu precise
+  * build package with internal libspatialite where libspatialite not available
 
- -- Jürgen E. Fischer <jef@norbit.de>  Mon, 05 Mar 2012 20:21:48 +0100
+ -- Jürgen E. Fischer <jef@norbit.de>  Tue, 06 Mar 2012 20:33:08 +0100
 
 qgis (1.8.0) UNRELEASED; urgency=low
 
