--- a/debian/changelog
+++ b/debian/changelog
@@ -10,8 +10,9 @@ qgis (1.9.90) UNRELEASED; urgency=low
   * build package with internal libspatialite where libspatialite not available
   * drop support for Ubuntu hardy, intrepid, jaunty and karmic
   * add mssqlprovider plugin
+  * copyright & policy update (synced from debiangis)
 
- -- Jürgen E. Fischer <jef@norbit.de>  Fri, 23 Mar 2012 20:47:06 +0100
+ -- Jürgen E. Fischer <jef@norbit.de>  Tue, 27 Mar 2012 22:59:36 +0200
 
 qgis (1.8.0) UNRELEASED; urgency=low
 
