--- a/debian/changelog
+++ b/debian/changelog
@@ -12,9 +12,9 @@ qgis (1.9.90) UNRELEASED; urgency=low
   * add mssqlprovider plugin
   * copyright & policy update (synced from debiangis)
   * run crssync in postinst
-  * switch from test with check target instead of test
+  * run tests with xvfb and upload to results to (c)dashboard
 
- -- Jürgen E. Fischer <jef@norbit.de>  Sat, 14 Apr 2012 10:39:28 +0200
+ -- Jürgen E. Fischer <jef@norbit.de>  Wed, 18 Apr 2012 20:50:12 +0200
 
 qgis (1.8.0) UNRELEASED; urgency=low
 
