--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 qgis (1.9.0) UNRELEASED; urgency=low
 
   * new development version 1.9 after branch of 1.8
+  * include ows provider
 
- -- Jürgen E. Fischer <jef@norbit.de>  Thu, 14 Jun 2012 10:56:27 +0200
+ -- Jürgen E. Fischer <jef@norbit.de>  Thu, 26 Jul 2012 13:54:05 +0200
 
 qgis (1.8.0) UNRELEASED; urgency=low
 
