--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ qgis (1.9.0) UNRELEASED; urgency=low
 
   * new development version 1.9 after branch of 1.8
   * include ows provider
+  * include wcs provider
 
- -- Jürgen E. Fischer <jef@norbit.de>  Thu, 26 Jul 2012 13:54:05 +0200
+ -- Jürgen E. Fischer <jef@norbit.de>  Wed, 08 Aug 2012 08:49:52 +0200
 
 qgis (1.8.0) UNRELEASED; urgency=low
 
