--- a/debian/changelog
+++ b/debian/changelog
@@ -6,9 +6,9 @@ qgis (1.9.0) UNRELEASED; urgency=low
   * symbology-ng-style now in sqlite3
   * include cpt-city files
   * support DEB_BUILD_OPTIONS' parallel=n
-  * add python-unittest2 build dependency
+  * add python-unittest2 build dependency for lucid, maverick and squeeze
 
- -- Jürgen E. Fischer <jef@norbit.de>  Fri, 14 Sep 2012 16:25:50 +0200
+ -- Jürgen E. Fischer <jef@norbit.de>  Fri, 14 Sep 2012 16:53:29 +0200
 
 qgis (1.8.0) UNRELEASED; urgency=low
 
