--- a/INSTALL
+++ b/INSTALL
@@ -554,7 +554,7 @@ The free (as in free beer) Express Edition installer is available under:
 The optional products are not necessary.  In the process the Windows SDKs for
 Visual Studio 2008 will also be downloaded and installed.
 
-You also need the Microsoft Windows Server® 2003 R2 Platform SDK (for setupapi):
+You also need the Microsoft Windows Serverï¿½ 2003 R2 Platform SDK (for setupapi):
 
   http://download.microsoft.com/download/f/a/d/fad9efde-8627-4e7a-8812-c351ba099151/PSDK-x86.exe
 
@@ -593,6 +593,7 @@ Advanced Installation):
 - sip
 - spatialite
 - libspatialindex-devel
+- python-qscintilla
 
 This will also select packages the above packages depend on.
 
