--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ qgis (1.9.0) UNRELEASED; urgency=low
   * add python-unittest2 build dependency for maverick and squeeze
   * disable PyQgsRectangle test on lucid (depends on unittest2)
   * add python-qscintilla2 dependency to python-qgis
+  * add support for ubuntu quantal
 
  -- Jürgen E. Fischer <jef@norbit.de>  Tue, 18 Sep 2012 22:18:25 +0200
 
