--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ qgis (1.9.0) UNRELEASED; urgency=low
   * disable PyQgsRectangle test on lucid (depends on unittest2)
   * add python-qscintilla2 dependency to python-qgis
   * add support for ubuntu quantal
+  * remove js files and add libjs-jquery/libjs-underscore dependency
 
  -- Jürgen E. Fischer <jef@norbit.de>  Tue, 18 Sep 2012 22:18:25 +0200
 
