--- a/debian/changelog
+++ b/debian/changelog
@@ -11,10 +11,9 @@ qgis (1.9.0) UNRELEASED; urgency=low
   * add python-psycopg2 and python-qscintilla2 dependency to python-qgis
   * add support for ubuntu quantal and raring
   * remove js files and add libjs-jquery/libjs-underscore dependency
-  * temporarily disable mssql and sqlanywhere provider until migrated to
-    new vector api.
+  * temporarily disable mssql provider until migrated to new vector api.
 
- -- Jürgen E. Fischer <jef@norbit.de>  Tue, 29 Jan 2013 21:01:49 +0100
+ -- Jürgen E. Fischer <jef@norbit.de>  Wed, 30 Jan 2013 21:06:05 +0100
 
 qgis (1.8.0) UNRELEASED; urgency=low
 
